# wt-core

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  flake.nix  sgconfig.yml
.ast-grep/rules/rust/core/: max-nesting-depth.yml  no-nested-if.yml
.ast-grep/rules/rust/optional/: no-println.yml  no-todo-macro.yml  no-unsafe.yml
.ast-grep/rules/rust/strict/: no-expect-without-message.yml  no-unwrap.yml
.github/: CODEOWNERS
.github/hooks/: README.md  commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml
bindings/bash/: wt.bash
bindings/fish/: wt.fish
bindings/nu/: wt.nu
bindings/zsh/: wt.zsh
plans/: 00-overview.md  01-extract-command-layer.md  02-fix-shell-binding-bugs.md  03-improve-git-error-classification.md  04-reporoot-ergonomics.md  05-cdpath-format-leaking.md
prompts/: setup-rust-ci.md
scripts/: setup-hooks.sh
src/: cli.rs  commands.rs  domain.rs  error.rs  git.rs  main.rs  output.rs  symlinks.rs  worktree.rs
tests/: cli_add_remove.rs  cli_diff.rs  cli_errors.rs  cli_from_worktree.rs  cli_go.rs  cli_init.rs  cli_list_stats.rs  cli_merge.rs  cli_prune.rs  cli_symlinks.rs  fixtures.rs
tests/bindings/: bash_test.bash  fish_test.fish  nu_test.nu  zsh_test.zsh
