[package]
name = "wt-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Portable Git worktree lifecycle manager"
license = "MIT"

[[bin]]
name = "wt-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
