[package]
name = "wt-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Portable Git worktree lifecycle manager"
license = "MIT"
authors = ["Claudiu Ivan <contact@claudiu-ivan.com>"]
repository = "https://github.com/kioku/wt-core"
homepage = "https://github.com/kioku/wt-core"
documentation = "https://github.com/kioku/wt-core#readme"
readme = "README.md"
keywords = ["git", "worktree", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    ".ast-grep/",
    "scripts/",
    "sgconfig.yml",
    "deny.toml",
    "AGENTS.md",
]

[[bin]]
name = "wt-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
